# bloomlib

./: .coverage  .coveragerc  .drone.yml  .gitignore  Cargo.toml  LICENSE.txt  README.md  bloomlib.pyi  coverage.xml  pyproject.toml
.github/workflows/: release.yml  tests.yml
doc/: CHANGELOG.md  benchmark_develop.txt  benchmark_release.md  todo.md
doc/.github/workflows/: CI.yml  rrrrrelease.yml
src/: bloom_filter.rs  counting_bloom_filter.rs  lib.rs  py_wrappers.rs  serialization.rs
test/: int_speedtest.py  main.py  speedtest.py  test_bloomfilter.py  test_bloomfilter_correct.py  test_demo.py
test/utils/: timing.py  utils_for_testing.py
