[package]
name = "bloomlib"
version = "0.0.0"
edition = "2021"
authors = ["Mike Huls"]
homepage = "https://www.mikehuls.com"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bloomlib"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.14"
features = ["extension-module"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # If you're using serde_json for serialization/deserialization
serde_derive = "1.0.195"
#bitvec = "1.0.1"
murmur3 = "0.5.2"
#bincode = { version = "1.3.3", features = [] }
